// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Info /> Show False 1`] = `
<div
  className="sc-AxjAm woTqO"
>
  <div>
    <button
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-ea9ulj-0 jVnGjM"
        fill="none"
        focusable="false"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1={18}
          x2={6}
          y1={6}
          y2={18}
        />
        <line
          x1={6}
          x2={18}
          y1={6}
          y2={18}
        />
      </svg>
    </button>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"
          />
        </svg>
        GitHub URL
      </small>
    </p>
    <p>
      <a
        href="undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx={12}
            cy={12}
            r={4}
          />
          <line
            x1={1.05}
            x2={7}
            y1={12}
            y2={12}
          />
          <line
            x1={17.01}
            x2={22.96}
            y1={12}
            y2={12}
          />
        </svg>
        GitHub COMMIT
      </small>
    </p>
    <p>
      <a
        href="undefined/commit/undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 9 9 4 4 9"
          />
          <path
            d="M20 20h-7a4 4 0 01-4-4V4"
          />
        </svg>
        Deployment
      </small>
    </p>
    <p>
      <a
        href="undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"
          />
          <circle
            cx={12}
            cy={7}
            r={4}
          />
        </svg>
        GitHub User
      </small>
    </p>
    <p>
      <a
        href="https://github.com/undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code>
          @
        </code>
      </a>
    </p>
  </div>
</div>
`;

exports[`Renders <Info /> Show Null 1`] = `
<div
  className="sc-AxjAm hHnPIK"
>
  <div>
    <button
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-ea9ulj-0 jVnGjM"
        fill="none"
        focusable="false"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1={18}
          x2={6}
          y1={6}
          y2={18}
        />
        <line
          x1={6}
          x2={18}
          y1={6}
          y2={18}
        />
      </svg>
    </button>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"
          />
        </svg>
        GitHub URL
      </small>
    </p>
    <p>
      <a
        href="undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx={12}
            cy={12}
            r={4}
          />
          <line
            x1={1.05}
            x2={7}
            y1={12}
            y2={12}
          />
          <line
            x1={17.01}
            x2={22.96}
            y1={12}
            y2={12}
          />
        </svg>
        GitHub COMMIT
      </small>
    </p>
    <p>
      <a
        href="undefined/commit/undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 9 9 4 4 9"
          />
          <path
            d="M20 20h-7a4 4 0 01-4-4V4"
          />
        </svg>
        Deployment
      </small>
    </p>
    <p>
      <a
        href="undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"
          />
          <circle
            cx={12}
            cy={7}
            r={4}
          />
        </svg>
        GitHub User
      </small>
    </p>
    <p>
      <a
        href="https://github.com/undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code>
          @
        </code>
      </a>
    </p>
  </div>
</div>
`;

exports[`Renders <Info /> Show True 1`] = `
<div
  className="sc-AxjAm eHDdCK"
>
  <div>
    <button
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-ea9ulj-0 jVnGjM"
        fill="none"
        focusable="false"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1={18}
          x2={6}
          y1={6}
          y2={18}
        />
        <line
          x1={6}
          x2={18}
          y1={6}
          y2={18}
        />
      </svg>
    </button>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"
          />
        </svg>
        GitHub URL
      </small>
    </p>
    <p>
      <a
        href="undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx={12}
            cy={12}
            r={4}
          />
          <line
            x1={1.05}
            x2={7}
            y1={12}
            y2={12}
          />
          <line
            x1={17.01}
            x2={22.96}
            y1={12}
            y2={12}
          />
        </svg>
        GitHub COMMIT
      </small>
    </p>
    <p>
      <a
        href="undefined/commit/undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 9 9 4 4 9"
          />
          <path
            d="M20 20h-7a4 4 0 01-4-4V4"
          />
        </svg>
        Deployment
      </small>
    </p>
    <p>
      <a
        href="undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code />
      </a>
    </p>
    <p>
      <small>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 jVnGjM"
          fill="none"
          focusable="false"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"
          />
          <circle
            cx={12}
            cy={7}
            r={4}
          />
        </svg>
        GitHub User
      </small>
    </p>
    <p>
      <a
        href="https://github.com/undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        <code>
          @
        </code>
      </a>
    </p>
  </div>
</div>
`;
